@@ -1,5 +1,9 @@
 * What is new in gsl-1.3+:
 
+** Fixed a missing transpose bug in the gsl_linalg_QR_QRsolve
+and gsl_linalg_QRPT_QRsolve routines which were computing the
+solution to Q^T R x = b instead of Q R x = b.
+
 ** Fixed gsl_sf_gammainv to return zero instead of a domain
 error for arguments corresponding to singularities in gamma.
 
